--- a/packages/gh-events-listener-service/.env
+++ b/packages/gh-events-listener-service/.env
@@ -1,2 +1,4 @@
-BROKER_IP_ENV_KEY = [localhost:9092,localhost:9090]
+KAFKA_BROKER_IP_ENV_KEY = [localhost:9092,localhost:9090]
 WEBHOOKS_SECRET_KEY = [your webhooks secret key]
+KAFKA_REPOSITORY_PUSH_QUEUE = 
+
