--- a/packages/amplication-common/package.json
+++ b/packages/amplication-common/package.json
@@ -12,11 +12,12 @@
   "author": "tupe12334",
   "license": "ISC",
   "devDependencies": {
-    "kafkajs": "1.16.0",
+    "@types/node": "17.0.24",
     "rimraf": "3.0.2",
     "typescript": "4.6.3"
   },
   "dependencies": {
-    "class-validator": "0.13.2"
+    "class-validator": "0.13.2",
+    "dotenv": "16.0.0"
   }
 }
