--- a/packages/gh-events-listener-service/package.json
+++ b/packages/gh-events-listener-service/package.json
@@ -18,7 +18,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "docker": "docker-compose up -d",
+    "docker:down": "docker-compose down --volumes"
   },
   "dependencies": {
     "@amplication/prisma-db": "^0.12.2",
