--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -224,7 +224,7 @@ jobs:
         env:
           working-directory: packages/${{ matrix.service }}
         run: |
-          GITHUB_HASH_MOD=$(sha1sum packages/${{ matrix.service }} | sha1sum)
+          GITHUB_HASH_MOD=$(sha1sum packages/${{ matrix.service }}/ | sha1sum)
           echo "GITHUB_HASH=${GITHUB_HASH_MOD%???}" >> $GITHUB_ENV
        
       - name: Check if repo exist
