--- a/packages/gh-events-listener-service/.env
+++ b/packages/gh-events-listener-service/.env
@@ -2,3 +2,8 @@ KAFKA_BROKER_IP_ENV_KEY = [localhost:9092,localhost:9090]
 WEBHOOKS_SECRET_KEY = [your webhooks secret key]
 KAFKA_REPOSITORY_PUSH_QUEUE = 
 
+# Postgres
+POSTGRESQL_URL=postgresql://prisma:topsecret@localhost:5433
+POSTGRESQL_USER=prisma
+POSTGRESQL_PASSWORD=topsecret
+
