--- a/packages/gh-events-listener-service/DockerFile
+++ b/packages/gh-events-listener-service/DockerFile
@@ -1,7 +1,7 @@
 ARG ALPINE_VERSION=alpine3.14
 ARG NODE_VERSION=16.13.1
 
-FROM node:$NODE_VERSION-$ALPINE_VERSION AS base
+FROM node:$NODE_VERSION AS base
 ARG NPM_VERSION=8.1.2
 ENV NPM_CONFIG_LOGLEVEL=silent
 ENV OPENCOLLECTIVE_HIDE=1
@@ -16,12 +16,12 @@ RUN npm ci --production
 
 FROM base AS build
 WORKDIR /app
-# Copy amplication/server and the its dependent packages
-COPY packages/gh-events-listener-service packages/amplication-prisma-db
+# Copy gh-events-listener-service  and the its dependent packages
+COPY packages/gh-events-listener-service packages/gh-events-listener-service
 # Installs all copied package node_modules ; Preparation for build
 RUN npm run bootstrap -- --scope @amplication/gh-events-listener-service --include-dependencies
 
-# Build all distributions needed for amplicaiton/server
+# Build all distributions needed for gh-events-listener-service
 RUN npm run build -- --scope @amplication/gh-events-listener-service --include-dependencies
 
 # Removes packages/*/node_modules
@@ -32,7 +32,7 @@ RUN npm run bootstrap -- -- --production --scope @amplication/gh-events-listener
 
 FROM base as server
 WORKDIR /app/packages/gh-events-listener-service
-# Copy all distributions and node_modules for amplication/server and its dependencies
+# Copy all distributions and node_modules for gh-events-listener-service  and its dependencies
 COPY --from=build /app/packages/gh-events-listener-service/package.json /app/packages/gh-events-listener-service/package.json
 COPY --from=build /app/packages/gh-events-listener-service/node_modules /app/packages/gh-events-listener-service/node_modules
 COPY --from=build /app/packages/gh-events-listener-service/dist /app/packages/gh-events-listener-service/dist
