update prisma script commands

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "lerna run --parallel --ignore server-template --ignore admin-template lint",
     "bootstrap": "lerna bootstrap",
     "clean": "lerna clean",
-    "prisma:generate": "lerna run --scope @amplication/server prisma:generate",
-    "migrate:save": "lerna run --scope @amplication/server migrate:save",
-    "migrate:up": "lerna run --scope @amplication/server migrate:up",
-    "migrate:rollback": "lerna run --scope @amplication/server migrate:rollback",
+    "prisma:generate": "lerna run --scope @amplication/prisma-db prisma:generate",
+    "migrate:save": "lerna run --scope @amplication/prisma-db migrate:save",
+    "migrate:up": "lerna run --scope @amplication/prisma-db migrate:up",
+    "migrate:rollback": "lerna run --scope @amplication/prisma-db migrate:rollback",
     "generate-graphql-schema": "lerna run --scope @amplication/server generate-graphql-schema",
     "check-graphql-schema": "lerna run --scope @amplication/server check-graphql-schema",
     "generate-graphql-code": "graphql-codegen",
