--- a/packages/amplication-prisma-db/package.json
+++ b/packages/amplication-prisma-db/package.json
@@ -11,7 +11,15 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "prisma:generate": "prisma generate",
-    "postinstall": "npm run prisma:generate"
+    "postinstall": "npm run prisma:generate",
+    "migrate:save": "prisma migrate dev",
+    "migrate:up": "prisma migrate deploy",
+    "migrate:rollback": "prisma migrate resolve --rolled-back",
+    "prisma:studio": "prisma studio ",
+    "prisma:generate:watch": "prisma generate --watch",
+    "start:db": "npm run migrate:up && npm run prisma:generate && npm run seed",
+    "seed": "ts-node prisma/seed.ts",
+    "db:clean": "ts-node prisma/clean.ts"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
