--- a/packages/gh-events-listener-service/.env
+++ b/packages/gh-events-listener-service/.env
@@ -1,6 +1,6 @@
-KAFKA_BROKER_IP_ENV_KEY = [localhost:9092,localhost:9090]
+KAFKA_BROKER_IP_ENV_KEY = localhost:9092,localhost:9090
 WEBHOOKS_SECRET_KEY = [your webhooks secret key]
-KAFKA_REPOSITORY_PUSH_QUEUE = 
+KAFKA_REPOSITORY_PUSH_QUEUE = repositoryPush_created
 
 # Postgres
 POSTGRESQL_URL=postgresql://prisma:topsecret@localhost:5433
