--- a/packages/amplication-git-pull-service/package.json
+++ b/packages/amplication-git-pull-service/package.json
@@ -23,6 +23,7 @@
     "docker:build": "docker build ."
   },
   "dependencies": {
+    "@amplication/logger": "^1.0.0",
     "@nestjs/common": "8.4.3",
     "@nestjs/config": "1.1.5",
     "@nestjs/core": "8.2.3",
