--- a/packages/gh-events-listener-service/.env
+++ b/packages/gh-events-listener-service/.env
@@ -1,4 +1,5 @@
 KAFKA_BROKER_IP_ENV_KEY = localhost:9092,localhost:9090
 WEBHOOKS_SECRET_KEY = [your webhooks secret key]
 KAFKA_REPOSITORY_PUSH_QUEUE = repositoryPush_created
+PORT = 4567
 
