--- a/packages/amplication-pull-request/package.json
+++ b/packages/amplication-pull-request/package.json
@@ -29,10 +29,8 @@
     "dir-compare": "4.0.0",
     "fast-glob": "3.2.11",
     "kafkajs": "1.16.0",
-    "nest-winston": "1.6.2",
     "reflect-metadata": "0.1.13",
-    "ts-morph": "13.0.3",
-    "winston-cloud-logging": "1.0.2"
+    "ts-morph": "13.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "8.2.4",
