--- a/packages/amplication-logger/package.json
+++ b/packages/amplication-logger/package.json
@@ -6,22 +6,19 @@
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
+    "prebuild": "rimraf lib",
     "test": "jest"
   },
   "keywords": [],
   "author": "tupe12334",
   "license": "ISC",
   "devDependencies": {
-    "@nestjs/config": "2.0.0",
-    "@nestjs/testing": "8.4.4",
     "@types/jest": "27.4.1",
     "@types/node": "17.0.25",
     "jest": "27.5.1",
+    "rimraf": "3.0.2",
     "ts-jest": "27.1.4",
     "typescript": "4.6.3"
-  },
-  "peerDependencies": {
-    "@nestjs/config": "^2.0.0 || ^1.0.0"
   },
   "dependencies": {
     "nest-winston": "1.6.2",
