--- a/packages/amplication-logger/package.json
+++ b/packages/amplication-logger/package.json
@@ -21,6 +21,7 @@
     "typescript": "4.6.3"
   },
   "dependencies": {
+    "@nestjs/common": "8.4.3",
     "nest-winston": "1.6.2",
     "winston-cloud-logging": "1.0.2"
   },
